[package]
name = "aoc_07"
version = "0.1.0"
authors = ["William Woodall <william@osrfoundation.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
intcode_machine = { path = "../../intcode_machine" }
